# online_pacgp

./: .gitignore  Fig_toy_demo.py  README.md  pyproject.toml
GP_test/: regression_viz_1D_test.ipynb  test_gp_mll.py  test_gp_pac.py
GP_test_pac/: online_gp_pac_first_sucess.py  online_gp_pac_reg.py  online_gp_pac_reg_backup.py  online_gp_pac_sin.py  online_sgpr_backup.py
experiments/: regression.py
notebooks/: regression_viz_1D.ipynb
online_gp/models/: online_gp_pac_regression.py  streaming_sgpr.py
